--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
@@ -2,9 +2,133 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+
+<!-- Bootstrap -->
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+	integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+	crossorigin="anonymous">
+
+<!-- jQuery and JS bundle w/ Popper.js -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+	crossorigin="anonymous"></script>
+
+<title>Tuition Reimbursement Form</title>
 </head>
 <body>
+	<h1 class="d-flex justify-content-center mt-5">Tuition Reimbursement
+		Form</h1>
+	<div class="container">
+		<div class="row mt-5">
+			<div class="col">
+				<form>
+					<div class="card-group">
+						<div class="card">
+							<div class="card-body">
+								<div class="row mt-3 d-flex justify-content-center">
+									<div class="col">
+										<input placeholder="First Name" class="form-control">
+									</div>
+									<div class="col">
+										<input placeholder="Last Name" class="form-control">
+									</div>
+									<div class="col">
+										<input placeholder="Employee Department" class="form-control">
+									</div>
+									<div class="col">
+										<input placeholder="Employee Supervisor" class="form-control">
+									</div>
+								</div>
+								<div class="row d-flex justify-content-center mt-3">
+									<div class="col-md-6">
+										<input placeholder="Event Name" class="form-control">
+									</div>
+									<div class="col-md-2">
+										<input type="date" placeholder="Date" class="form-control">
+									</div>
+									<div class="col-md-2">
+										<input type="time" placeholder="Time" class="form-control">
+									</div>
+									<div class="col-md-2">
+										<input placeholder="Location" class="form-control">
+									</div>
 
+								</div>
+								<div class="row d-flex justify-content-center mt-3">
+									<div class="col-md-6">
+										<input type="text" placeholder="Work Time Missed"
+											class="form-control">
+									</div>
+									<div class="col-md-6">
+										<textarea class="form-control">Description</textarea>
+									</div>
+								</div>
+								<div class="row d-flex justify-content-center mt-3">
+									<div class="col-md-2">
+										<input placeholder="Cost" class="form-control">
+									</div>
+									<div class="col-md-4">
+										<select class="custom-select">
+											<option selected disabled>Grading Format</option>
+											<option value="1">Grade</option>
+											<option value="2">Presentation</option>
+										</select> <select class="custom-select mt-1">
+											<option selected disabled>Type of Event</option>
+											<option value="1">University</option>
+											<option value="2">Seminar</option>
+											<option value="3">Certification Preparation</option>
+											<option value="4">Certification</option>
+											<option value="5">Technical Training</option>
+											<option value="6">Other</option>
+										</select>
+									</div>
+									<div class="col-md-6">
+										<textarea class="form-control">Work Related Justification</textarea>
+									</div>
+								</div>
+								<div class="row d-flex justify-content-center mt-3">
+									<div class="col-md-4">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input"
+												id="inputGroupFile01"
+												aria-describedby="inputGroupFileAddon01"> <label
+												class="custom-file-label" for="inputGroupFile01">Event
+												Related Attachments</label>
+										</div>
+									</div>
+									<div class="col-md-4">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input"
+												id="inputGroupFile01"
+												aria-describedby="inputGroupFileAddon01"> <label
+												class="custom-file-label" for="inputGroupFile01">Approval
+												Email Attachments</label>
+										</div>
+									</div>
+									<div class="col-md-4">
+										<select class="custom-select">
+											<option selected disabled>Type of Approval</option>
+											<option value="1">Direct Supervisor</option>
+											<option value="2">Department Head</option>
+										</select>
+									</div>
+								</div>
+								<div class="row d-flex justify-content-center mt-5">
+									<div class="col-md-2">
+										<button type="submit" class="btn btn-primary m-1">Submit Form</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
