--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
@@ -21,8 +21,26 @@
 <title>Tuition Reimbursement Form</title>
 </head>
 <body>
-	<h1 class="d-flex justify-content-center mt-5">Tuition Reimbursement
-		Form</h1>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a class="nav-link" href="#">Home </a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Reimbursement
+						Rules</a></li>
+				<li class="nav-item active"><a class="nav-link" href="#">Submission
+						Form <span class="sr-only">(current)</span>
+				</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Pending
+						Reimbursements</a></li>
+				</li>
+			</ul>
+			<div class="d-flex justify-content-center">
+				<a href=""><button type="button" class="btn btn-primary">Log Out</button></a>
+			</div>
+		</div>
+	</nav>
+	<h1 class="d-flex justify-content-center mt-5">Tuition
+		Reimbursement Form</h1>
 	<div class="container">
 		<div class="row mt-5">
 			<div class="col">
@@ -120,7 +138,8 @@
 								</div>
 								<div class="row d-flex justify-content-center mt-5">
 									<div class="col-md-2">
-										<button type="submit" class="btn btn-primary m-1">Submit Form</button>
+										<button type="submit" class="btn btn-primary m-1">Submit
+											Form</button>
 									</div>
 								</div>
 							</div>
