--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
@@ -21,8 +21,27 @@
 <title>Reimbursement Rules</title>
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a class="nav-link" href="#">Home </a></li>
+				<li class="nav-item active"><a class="nav-link" href="#">Reimbursement
+						Rules<span class="sr-only">(current)</span>
+				</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Submission
+						Form </a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Pending
+						Reimbursements</a></li>
+				</li>
+			</ul>
+			<div class="d-flex justify-content-center">
+				<a href=""><button type="button" class="btn btn-primary">Log
+						Out</button></a>
+			</div>
+		</div>
+	</nav>
 	<div class="container">
-		<div class="row d-flex justify-content-center">
+		<div class="row d-flex justify-content-center mt-5">
 			<h1>Rules for Tuition Reimbursement</h1>
 		</div>
 	</div>
