--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -17,27 +17,42 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
+
 <title>Employee Portal</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span> </a></li>
+				<li class="nav-item active"><a class="nav-link" href="#">Home
+						<span class="sr-only">(current)</span>
+				</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Reimbursement
 						Rules</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Submission
-						Form 
-				</a></li>
+						Form </a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Pending
 						Reimbursements</a></li>
 				</li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href=""><button type="button" class="btn btn-primary">Log Out</button></a>
+				<a href=""><button type="button" class="btn btn-primary">Log
+						Out</button></a>
 			</div>
 		</div>
 	</nav>
+	<div class="row">
+		<h1 class="m-5">
+			Welcome, <span class="text-primary">Employee X</span>, to the Tuition
+			Reimbursement Management System
+		</h1>
+	</div>
+	<div class="row">
+		<div class="col-lg-4 d-flex justify-content-center">
+			<h3 class="ml-5">
+				You have <span class="text-warning">$1000</span> available.
+			</h3>
+		</div>
+	</div>
 </body>
 </html>
