--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -17,7 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
+
 <title>Pending Reimbursements</title>
 </head>
 <body>
@@ -40,5 +40,28 @@
 			</div>
 		</div>
 	</nav>
+	<div class="row">
+		<h1 class="m-5">Pending Employee Reimbursements
+		</h1>
+	</div>
+	<div class="row">
+		<div class="col-md-5 ml-5">
+			<h3>
+				<span class="text-warning">Pending</span>
+			</h3>
+		</div>
+		<div class="col-md-5 ml-3">
+			<h3>
+				<span class="text-warning">Approved</span>
+			</h3>
+		</div>
+	</div>
+	<div class="row mt-5">
+		<div class="col d-flex justify-content-center">
+			<h3>
+				<span class="text-warning">Awarded Submissions</span>
+			</h3>
+		</div>
+	</div>
 </body>
 </html>
