changing department and supervisor fields on form to dropdowns. starting work on beans.

--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
@@ -56,10 +56,19 @@
 										<input placeholder="Last Name" class="form-control">
 									</div>
 									<div class="col">
-										<input placeholder="Employee Department" class="form-control">
+										<select class="custom-select">
+											<option selected disabled>Department</option>
+											<option value="1">Accounting</option>
+											<option value="2">Information Technology</option>
+											<option value="3">Management</option>
+										</select>
 									</div>
 									<div class="col">
-										<input placeholder="Employee Supervisor" class="form-control">
+										<select class="custom-select">
+											<option selected disabled>Employee Supervisor</option>
+											<option value="1">Ray</option>
+											<option value="2">Tina</option>
+										</select>
 									</div>
 								</div>
 								<div class="row d-flex justify-content-center mt-3">
