woohoo! session is working

--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -44,14 +44,14 @@
 	</nav>
 	<div class="row">
 		<h1 class="m-5">
-			Welcome, <span class="text-primary">Employee X</span>, to the Tuition
+			Welcome, <span id="empName" class="text-primary"></span>, to the Tuition
 			Reimbursement Management System
 		</h1>
 	</div>
 	<div class="row">
 		<div class="col-lg-4 d-flex justify-content-center">
 			<h3 class="ml-5">
-				You have <span class="text-warning">$1000</span> available.
+				You have <span id="amt" class="text-warning"></span> available.
 			</h3>
 		</div>
 	</div>
