--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -17,20 +17,23 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
-	
+<script type="text/javascript" src="JS/BenCoPortal.js"></script>
+
+
 <title>Benefits Coordinator Portal</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
+			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item active"><a class="nav-link" href="#">Pending Reimbursement Requests
-						<span class="sr-only">(current)</span>
+				<li class="nav-item active"><a class="nav-link" href="#">Pending
+						Reimbursement Requests <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Grades and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Reimbursement Reports</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="#">Grades
+						and Presentations</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="#">Reimbursement
+						Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href=""><button type="button" class="btn btn-primary">Log
@@ -38,5 +41,11 @@
 			</div>
 		</div>
 	</nav>
+	<div class="row">
+		<h1 class="m-5">Pending Requests:</h1>
+	</div>
+	<div class="container" id="formsContainer">
+	<p></p>
+	</div>
 </body>
 </html>
