--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -17,6 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
+<script type="text/javascript" src="JS/EmpPortal.js"></script>
 
 <title>Employee Portal</title>
 </head>
@@ -24,14 +25,14 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
+				<li class="nav-item active"><a class="nav-link" href="HTML/EmpPortal/EmpPortal.html">Home
 						<span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Reimbursement
+				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Rules.html">Reimbursement
 						Rules</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Submission
+				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Form.html">Submission
 						Form </a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Pending
+				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Pending.html">Pending
 						Reimbursements</a></li>
 				</li>
 			</ul>
