--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
@@ -24,13 +24,13 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item"><a class="nav-link" href="#">Home </a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Reimbursement
+				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/EmpPortal.html">Home </a></li>
+				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Rules.html">Reimbursement
 						Rules</a></li>
-				<li class="nav-item active"><a class="nav-link" href="#">Submission
+				<li class="nav-item active"><a class="nav-link" href="HTML/EmpPortal/Form.html">Submission
 						Form <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Pending
+				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Pending.html">Pending
 						Reimbursements</a></li>
 				</li>
 			</ul>
@@ -84,7 +84,6 @@
 									<div class="col-md-2">
 										<input placeholder="Location" name="location" class="form-control">
 									</div>
-
 								</div>
 								<div class="row d-flex justify-content-center mt-3">
 									<div class="col-md-6">
