--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -24,12 +24,12 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/EmpPortal.html">Home </a></li>
-				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Rules.html">Reimbursement
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/emphome.change">Home </a></li>
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/rules.change">Reimbursement
 						Rules</a></li>
-				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Form.html">Submission
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/empForm.change">Submission
 						Form </a></li>
-				<li class="nav-item active"><a class="nav-link" href="HTML/EmpPortal/Pending.html">Pending
+				<li class="nav-item active"><a class="nav-link" href="/UpGrade/pending.change">Pending
 						Reimbursements <span class="sr-only">(current)</span>
 				</a></li>
 				</li>
