changed admin login to route based on admin role, working on filtering array with js

--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Alter.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Alter.html
@@ -26,11 +26,11 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item active"><a class="nav-link" href="#">Pending Reimbursement Requests
+				<li class="nav-item active"><a class="nav-link" href="/UpGrade/requests.change">Pending Reimbursement Requests
 						<span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Grades and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Reimbursement Reports</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/grades.change">Grades and Presentations</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href=""><button type="button" class="btn btn-primary">Log
