--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -45,7 +45,7 @@
 		<h1 class="m-5">Pending Requests:</h1>
 	</div>
 	<div class="container" id="formsContainer">
-	<p></p>
+	Employee: <span id="empid" class="text-warning"></span> Amount Reqeusted: <span id="amount" class="text-warning"></span>
 	</div>
 </body>
 </html>
