--- a/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
@@ -25,11 +25,11 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item"><a class="nav-link" href="#">Pending Reimbursement Requests
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/requests.change">Pending Reimbursement Requests
 						
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Grades and Presentations</a></li>
-				<li class="nav-item active ml-3"><a class="nav-link" href="#">Reimbursement Reports
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/grades.change">Grades and Presentations</a></li>
+				<li class="nav-item active ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement Reports
 				<span class="sr-only">(current)</span>
 				</a></li>
 			</ul>
