--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -25,14 +25,14 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="HTML/EmpPortal/EmpPortal.html">Home
+				<li class="nav-item active"><a class="nav-link" href="/UpGrade/emphome.change">Home
 						<span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Rules.html">Reimbursement
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/rules.change">Reimbursement
 						Rules</a></li>
-				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Form.html">Submission
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/empForm.change">Submission
 						Form </a></li>
-				<li class="nav-item"><a class="nav-link" href="HTML/EmpPortal/Pending.html">Pending
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
 						Reimbursements</a></li>
 				</li>
 			</ul>
@@ -44,14 +44,14 @@
 	</nav>
 	<div class="row">
 		<h1 class="m-5">
-			Welcome, <span class="text-primary">Employee X</span>, to the Tuition
+			Welcome, <span id="empName" class="text-primary"></span>, to the Tuition
 			Reimbursement Management System
 		</h1>
 	</div>
 	<div class="row">
 		<div class="col-lg-4 d-flex justify-content-center">
 			<h3 class="ml-5">
-				You have <span class="text-warning">$1000</span> available.
+				You have <span id="amt" class="text-warning"></span> available.
 			</h3>
 		</div>
 	</div>
