--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -32,7 +32,7 @@
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link" href="#">Grades
 						and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Reimbursement
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement
 						Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
