--- a/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
@@ -17,20 +17,24 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
+<script type="text/javascript" src="JS/ViewDeets.js"></script>
+
 <title>Reimbursement Reports</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
+			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/requests.change">Pending Reimbursement Requests
-						
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/requests.change">Pending Reimbursement Requests
+
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/grades.change">Grades and Presentations</a></li>
-				<li class="nav-item active ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement Reports
-				<span class="sr-only">(current)</span>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/grades.change">Grades and Presentations</a></li>
+				<li class="nav-item active ml-3"><a class="nav-link"
+					href="/UpGrade/deets.change">Reimbursement Reports <span
+						class="sr-only">(current)</span>
 				</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
@@ -39,5 +43,23 @@
 			</div>
 		</div>
 	</nav>
+	<div class="row">
+		<h1 class="m-5">Reimbursement Reports:</h1>
+	</div>
+	<div class="container">
+		<table id="detailTable" class="table">
+			<thead>
+				<tr>
+					<th scope="col">Employee:</th>
+					<th scope="col">Cost:</th>
+					<th scope="col">Description:</th>
+					<th scope="col">Date:</th>
+					<th scope="col">Justification:</th>
+				</tr>
+			</thead>
+			<tbody id="formData"></tbody>
+		</table>
+	</div>
+	<div></div>
 </body>
 </html>
