entered entire table in deets page, formatted with scrolling

--- a/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
@@ -46,15 +46,32 @@
 	<div class="row">
 		<h1 class="m-5">Reimbursement Reports:</h1>
 	</div>
-	<div class="container">
+	<div class="table-responsive">
 		<table id="detailTable" class="table">
 			<thead>
 				<tr>
-					<th scope="col">Employee:</th>
-					<th scope="col">Cost:</th>
-					<th scope="col">Description:</th>
+					<th scope="col">Request ID:</th>
+					<th scope="col">Employee ID:</th>
+					<th scope="col">Event:</th>
 					<th scope="col">Date:</th>
+					<th scope="col">Time:</th>
+					<th scope="col">Location:</th>
+					<th scope="col">Description:</th>
+					<th scope="col">Cost:</th>
+					<th scope="col">File:</th>
+					<th scope="col">Grade:</th>
+					<th scope="col">Type:</th>
 					<th scope="col">Justification:</th>
+					<th scope="col">Email Approval:</th>
+					<th scope="col">Supervisor Approval:</th>
+					<th scope="col">Dept Head Approval:</th>
+					<th scope="col">BenCo Approve:</th>
+					<th scope="col">Altered Amount:</th>
+					<th scope="col">Altered Reason:</th>
+					<th scope="col">Exceeds Funds:</th>
+					<th scope="col">Awarded:</th>
+					<th scope="col">Denial Reason:</th>
+					
 				</tr>
 			</thead>
 			<tbody id="formData"></tbody>
