--- a/UpGrade/src/main/webapp/HTML/Login/EmpLogin.html
+++ b/UpGrade/src/main/webapp/HTML/Login/EmpLogin.html
@@ -17,6 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
+<script type="text/javascript" src="../../JS/Login.js"></script>
 
 <title>Employee Login Page</title>
 </head>
@@ -52,7 +53,7 @@
 			<h3>- OR -</h3>
 		</div>
 		<div class="row d-flex justify-content-center mt-5">
-		<a href=""><button type="button" class="btn btn-secondary">Login as Administrator</button></a>
+		<a href="/UpGrade/admin.change"><button type="button" class="btn btn-secondary">Login as Administrator</button></a>
 		</div>
 		
 	</div>
