fixing logout button functionality

--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -36,7 +36,7 @@
 						Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href=""><button type="button" class="btn btn-primary">Log
+				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
 						Out</button></a>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 		<h1 class="m-5">Pending Requests:</h1>
 	</div>
 	<div class="container" id="formsContainer">
-	Employee: <span id="empid" class="text-warning"></span> Amount Reqeusted: <span id="amount" class="text-warning"></span>
+	Employee: <span id="empid" class="text-warning"></span> Amount Requested: <span id="amount" class="text-warning"></span>
 	</div>
 </body>
 </html>
