--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
@@ -28,7 +28,7 @@
 				<h4 class="text-white mt-2">Department Head Portal</h4>
 			</div>
 			<div class="col d-flex justify-content-end">
-				<a href=""><button type="button"
+				<a href="/UpGrade/logout.change"><button type="button"
 						class="btn btn-primary d-flex justify-content-center">Log
 						Out</button></a>
 			</div>
