--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -37,7 +37,7 @@
 				</li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href=""><button type="button" onClick="logout()" class="btn btn-primary">Log
+				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
 						Out</button></a>
 			</div>
 		</div>
