--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DirSupPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DirSupPortal.html
@@ -32,7 +32,7 @@
 				</li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href=""><button type="button" class="btn btn-primary">Log
+				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
 						Out</button></a>
 			</div>
 		</div>
