--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -27,10 +27,10 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item active"><a class="nav-link" href="#">Pending
+				<li class="nav-item active"><a class="nav-link" href="/UpGrade/bencohome.change">Pending
 						Reimbursement Requests <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Grades
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/presentations.change">Grades
 						and Presentations</a></li>
 				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement
 						Reports</a></li>
