--- a/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/ViewDeets.html
@@ -27,8 +27,7 @@
 			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/requests.change">Pending Reimbursement Requests
-
+					href="/UpGrade/bencohome.change">Pending Reimbursement Requests
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/grades.change">Grades and Presentations</a></li>
@@ -38,7 +37,7 @@
 				</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href=""><button type="button" class="btn btn-primary">Log
+				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
 						Out</button></a>
 			</div>
 		</div>
