--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -42,10 +42,10 @@
 		</div>
 	</nav>
 	<div class="row">
-		<h1 class="m-5">Pending Requests:</h1>
+		<h1 class="m-5">Pending Reimbursement Requests:</h1>
 	</div>
-	<div class="container" id="formsContainer">
-	Employee: <span id="empid" class="text-warning"></span> Amount Requested: <span id="amount" class="text-warning"></span>
+	<div class="row ml-5">
+		<div class="col-md-6"><h3><span class="mx-3" id="empFName"></span><span id="empLName"></span></h3><h3></h3></div>
 	</div>
 </body>
 </html>
