--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -51,7 +51,7 @@
 	<div class="row">
 		<div class="col-lg-4 d-flex justify-content-center">
 			<h3 class="ml-5">
-				You have <span id="amt" class="text-warning"></span> available.
+				You have <span class="text-warning">$</span><span id="amt" class="text-warning"></span> available.
 			</h3>
 		</div>
 	</div>
