--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -27,25 +27,41 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item active"><a class="nav-link" href="/UpGrade/bencohome.change">Pending
-						Reimbursement Requests <span class="sr-only">(current)</span>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/bencohome.change">Pending Reimbursement Requests
+						<span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/presentations.change">Grades
-						and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement
-						Reports</a></li>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="">Approve Reimbursements</a></li>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
-						Out</button></a>
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
 	<div class="row">
-		<h1 class="m-5">Pending Reimbursement Requests:</h1>
+		<h1 class="m-5">Employees with Requests Pending Approval</h1>
 	</div>
 	<div class="row ml-5">
-		<div class="col-md-6"><h3><span class="mx-3" id="empFName"></span><span id="empLName"></span></h3><h3></h3></div>
+		<table class="table table-hover ml-5">
+			<thead>
+				<tr>
+					<th>Employee ID</th>
+					<th>Reimbursement ID</th>
+					<th>First Name</th>
+					<th>Last Name</th>
+					<th>Event Name</th>
+					<th># Days Left to Approve</th>
+				</tr>
+			</thead>
+			<tbody id="tableData">
+			</tbody>
+		</table>
 	</div>
+
 </body>
 </html>
