--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Reports.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Reports.html
@@ -17,7 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-<script type="text/javascript" src="JS/ViewDeets.js"></script>
+<!--<script type="text/javascript" src="JS/Reports.js"></script>-->
 
 <title>Reimbursement Reports</title>
 </head>
@@ -30,9 +30,10 @@
 					href="/UpGrade/bencohome.change">Pending Reimbursement Requests
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
-					href="/UpGrade/grades.change">Grades and Presentations</a></li>
+					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="">Approve Reimbursements</a></li>
 				<li class="nav-item active ml-3"><a class="nav-link"
-					href="/UpGrade/deets.change">Reimbursement Reports <span
+					href="/UpGrade/reports.change">Reimbursement Reports <span
 						class="sr-only">(current)</span>
 				</a></li>
 			</ul>
@@ -46,7 +47,7 @@
 		<h1 class="m-5">Reimbursement Reports:</h1>
 	</div>
 	<div class="table-responsive">
-		<table id="detailTable" class="table">
+		<table class="table">
 			<thead>
 				<tr>
 					<th scope="col">Request ID:</th>
@@ -73,7 +74,7 @@
 					
 				</tr>
 			</thead>
-			<tbody id="formData"></tbody>
+			<tbody></tbody>
 		</table>
 	</div>
 	<div></div>
