adding a details page on navbar for benco to enter and view a single reimbursement - fixing and completing routing for benco portal

--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Details.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Details.html
@@ -21,6 +21,27 @@
 <title>View Employee Details</title>
 </head>
 <body>
-
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
+			<ul class="navbar-nav mr-auto ml-5">
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/bencohome.change">Pending Reimbursement Requests
+				</a></li>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
+				<li class="nav-item active ml-3"><a class="nav-link" href="/UpGrade/details.change">Approve Reimbursements
+				<span class="sr-only">(current)</span>		
+				</a></li>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
+			</ul>
+			<div class="d-flex justify-content-center">
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
+			</div>
+		</div>
+	</nav>
+	<h1>On Details Page</h1>
 </body>
 </html>
