--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -33,7 +33,7 @@
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="">Approve Reimbursements</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/details.change">Approve Reimbursements</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
 			</ul>
