--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Grades.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Grades.html
@@ -17,10 +17,30 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
+
 <title>Grade and Presentations</title>
 </head>
 <body>
-	<h1>Whoa whoa! Grades and stuff will go here.</h1>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
+			<ul class="navbar-nav mr-auto ml-5">
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/bencohome.change">Pending Reimbursement Requests
+				</a></li>
+				<li class="nav-item active ml-3"><a class="nav-link"
+					href="/UpGrade/presentations.change">Grades and Presentations <span class="sr-only">(current)</span>
+					</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/details.change">Approve
+						Reimbursements</a></li>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
+			</ul>
+			<div class="d-flex justify-content-center">
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
+			</div>
+		</div>
+	</nav>
 </body>
 </html>
