--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Reports.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Reports.html
@@ -31,7 +31,7 @@
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="">Approve Reimbursements</a></li>
+				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/details.change">Approve Reimbursements</a></li>
 				<li class="nav-item active ml-3"><a class="nav-link"
 					href="/UpGrade/reports.change">Reimbursement Reports <span
 						class="sr-only">(current)</span>
