--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Details.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Details.html
@@ -17,6 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
+<script type="text/javascript" src="JS/Details.js"></script>
 
 <title>View Employee Details</title>
 </head>
@@ -30,8 +31,9 @@
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
-				<li class="nav-item active ml-3"><a class="nav-link" href="/UpGrade/details.change">Approve Reimbursements
-				<span class="sr-only">(current)</span>		
+				<li class="nav-item active ml-3"><a class="nav-link"
+					href="/UpGrade/details.change">Approve Reimbursements <span
+						class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
@@ -42,6 +44,19 @@
 			</div>
 		</div>
 	</nav>
-	<h1>On Details Page</h1>
+	<div class="row mt-5">
+		<div class="col d-flex justify-content-center ">
+			<h3>Search by Reimbursement Request ID:</h3>
+		</div>
+	</div>
+	<div class="row mt-3">
+		<div class="col d-flex justify-content-center">
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
