--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
@@ -32,7 +32,8 @@
 						Form </a></li>
 				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
 						Reimbursements</a></li>
-				</li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
