--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
@@ -24,13 +24,20 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<div class="col">
-				<h4 class="text-white mt-2">Department Head Portal</h4>
-			</div>
-			<div class="col d-flex justify-content-end">
-				<a href=""><button type="button"
-						class="btn btn-primary d-flex justify-content-center">Log
-						Out</button></a>
+			<h4 class="text-white mt-2">Dept Head Portal</h4>
+			<ul class="navbar-nav mr-auto ml-5">
+				<li class="nav-item ml-5"><a class="nav-link"
+					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
+				<li class="nav-item ml-5"><a class="nav-link"
+					href="/UpGrade/details.change">Approve Reimbursements</a></li>
+				<li class="nav-item ml-5"><a class="nav-link"
+					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
+				<li class="nav-item ml-5"><a class="nav-link"
+					href="/UpGrade/enterEmployee.change">Enter Employee</a></li>
+			</ul>
+			<div class="d-flex justify-content-center">
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
