--- a/UpGrade/src/main/webapp/HTML/AdminPortal/EnterEmployee.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/EnterEmployee.html
@@ -27,7 +27,7 @@
 			<h4 class="text-white mt-2">Dept Head Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
 				<li class="nav-item active"><a class="nav-link"
-					href="/UpGrade/enterEmployee.change">Enter New Employee <span
+					href="/UpGrade/enterEmployee.change">Enter Employee <span
 						class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
