--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
@@ -24,8 +24,10 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<h4 class="text-white mt-2">Dept Head Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/depthead.change">Dept Head Portal<span
+						class="sr-only">(current)</span></a></li>
 				<li class="nav-item ml-5"><a class="nav-link"
 					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
 				<li class="nav-item ml-5"><a class="nav-link"
