one table on employee pending now displays data

--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -32,7 +32,7 @@
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item active"><a class="nav-link"
-					href="/UpGrade/pending.change">Pending Reimbursements <span
+					href="/UpGrade/allpending.change">Pending Reimbursements <span
 						class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link"
@@ -77,7 +77,7 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th>Reimbursement ID</th>
+							<th>ID</th>
 							<th>Event Name</th>
 							<th>Grade Submission</th>
 							<th>Supervisor Approval</th>
@@ -106,7 +106,7 @@
 					<table class="table table-hover">
 						<thead>
 							<tr>
-								<th>Reimbursement ID</th>
+								<th>ID</th>
 								<th>Event Name</th>
 								<th>Grade Submission</th>
 								<th>Amount Awarded</th>
