--- a/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
@@ -32,7 +32,7 @@
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/pending.change">Pending Reimbursements
+					href="/UpGrade/allpending.change">Pending Reimbursements
 				</a></li>
 				<li class="nav-item active"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details
@@ -45,6 +45,19 @@
 			</div>
 		</div>
 	</nav>
-	<h1>View Single Reimbursement</h1>
+		<div class="row mt-5">
+		<div class="col d-flex justify-content-center ">
+			<h3>Search by Reimbursement Request ID:</h3>
+		</div>
+	</div>
+	<div class="row mt-3">
+		<div class="col d-flex justify-content-center">
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
