--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -32,7 +32,7 @@
 						Rules</a></li>
 				<li class="nav-item"><a class="nav-link" href="/UpGrade/empForm.change">Submission
 						Form </a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/allpending.change">Pending
 						Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
