--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
@@ -30,7 +30,7 @@
 				</a></li>
 				<li class="nav-item"><a class="nav-link" href="/UpGrade/empForm.change">Submission
 						Form </a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/allpending.change">Pending
 						Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
