direct supervisor and dept head portals can view all pending adding various html

--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Reports.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Reports.html
@@ -17,7 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-<!--<script type="text/javascript" src="JS/Reports.js"></script>-->
+<script type="text/javascript" src="JS/Reports.js"></script>
 
 <title>Reimbursement Reports</title>
 </head>
@@ -46,8 +46,8 @@
 	<div class="row">
 		<h1 class="m-5">Reimbursement Reports:</h1>
 	</div>
-	<div class="table-responsive">
-		<table class="table">
+	<div">
+		<table class="table table-hover">
 			<thead>
 				<tr>
 					<th scope="col">Request ID:</th>
@@ -74,7 +74,8 @@
 					
 				</tr>
 			</thead>
-			<tbody></tbody>
+			<tbody id="formData">
+			</tbody>
 		</table>
 	</div>
 	<div></div>
