--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
@@ -17,7 +17,7 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-
+<script type="text/javascript" src="JS/DHPortal.js"></script>
 
 <title>Department Head Portal</title>
 </head>
@@ -34,5 +34,26 @@
 			</div>
 		</div>
 	</nav>
+	<div class="row">
+		<h1 class="m-5">Employee Requests Pending Department Head Approval</h1>
+	</div>
+	<div class="row">
+		<div class="col mx-5">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Employee ID</th>
+						<th>Reimbursement ID</th>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>Event Name</th>
+						<th># Days Left to Approve</th>
+					</tr>
+				</thead>
+				<tbody id="tableData">
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
