--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DirSupPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DirSupPortal.html
@@ -17,7 +17,8 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
+<script type="text/javascript" src="JS/SupPortal.js"></script>
+
 <title>Supervisor Portal</title>
 </head>
 <body>
@@ -25,17 +26,40 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<h4 class="text-white mt-2">Supervisor Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item active"><a class="nav-link" href="#">Pending Reimbursement Requests
-						<span class="sr-only">(current)</span>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/super.change">Pending Reimbursement Requests <span
+						class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="#">Pending Grades and Presentations</a></li>
-				</li>
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="">Pending Grades and
+						Presentations</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href=""><button type="button" class="btn btn-primary">Log
-						Out</button></a>
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
+	<div class="row">
+		<h1 class="m-5">Employee Requests Pending Supervisor Approval</h1>
+	</div>
+	<div class="row">
+		<div class="col mx-5">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Employee ID</th>
+						<th>Reimbursement ID</th>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>Event Name</th>
+						<th># Days Left to Approve</th>
+					</tr>
+				</thead>
+				<tbody id="tableData">
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
