--- a/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
@@ -17,26 +17,36 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 	crossorigin="anonymous"></script>
-	
+
 <title>Insert title here</title>
 </head>
-
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<h4 class="text-white mt-2">Benefits Coordinator Portal</h4>
-			<ul class="navbar-nav mr-auto ml-5">
-				<li class="nav-item active"><a class="nav-link" href="/UpGrade/requests.change">Pending Reimbursement Requests
-						<span class="sr-only">(current)</span>
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/emphome.change">Home </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/empForm.change">Submission Form </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/allpending.change">Pending Reimbursements
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/grades.change">Grades and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link" href="/UpGrade/deets.change">Reimbursement Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
-						Out</button></a>
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
+		<div class="row mt-5">
+		<div class="col d-flex justify-content-center ">
+			
+		</div>
+	</div>
+	<div class="row mt-3">
+		
+	</div>
 </body>
 </html>
