--- a/UpGrade/src/main/webapp/HTML/Login/AdminLogin.html
+++ b/UpGrade/src/main/webapp/HTML/Login/AdminLogin.html
@@ -52,7 +52,7 @@
 			<h3>- OR -</h3>
 		</div>
 		<div class="row d-flex justify-content-center mt-5">
-		<a href=""><button type="button" class="btn btn-secondary">Login as Administrator</button></a>
+		<a href="/UpGrade/empLogin.change"><button type="button" class="btn btn-secondary">Login as Employee</button></a>
 		</div>
 		
 	</div>
