reviewed some bugs

--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -35,6 +35,8 @@
 					href="/UpGrade/allpending.change">Pending Reimbursements <span
 						class="sr-only">(current)</span>
 				</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button"
