--- a/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
@@ -33,6 +33,8 @@
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/allpending.change">Pending Reimbursements
 				</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button"
