adding all changes

--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
@@ -55,5 +55,25 @@
 			</table>
 		</div>
 	</div>
+		<div class="row">
+		<div class="col-md-6 d-flex justify-content-center">
+			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Approve:</h4>
+			<form method="post" action="" class="form-inline mt-5">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0">Approve</button>
+			</form>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6 d-flex justify-content-center">
+			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Deny:</h4>
+			<form method="post" action="" class="form-inline mt-5">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+				<button class="btn btn-outline-danger my-2 my-sm-0">Deny</button>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
