--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DirSupPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DirSupPortal.html
@@ -31,7 +31,7 @@
 						class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
-					href="">Pending Grades and
+					href="/UpGrade/supgrades.change">Pending Grades and
 						Presentations</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
@@ -59,6 +59,26 @@
 				<tbody id="tableData">
 				</tbody>
 			</table>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6 d-flex justify-content-center">
+			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Approve:</h4>
+			<form method="post" action="" class="form-inline mt-5">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0">Approve</button>
+			</form>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6 d-flex justify-content-center">
+			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Deny:</h4>
+			<form method="post" action="" class="form-inline mt-5">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+				<button class="btn btn-outline-danger my-2 my-sm-0">Deny</button>
+			</form>
 		</div>
 	</div>
 </body>
