--- a/UpGrade/src/main/webapp/HTML/AdminPortal/Grades.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/Grades.html
@@ -33,8 +33,6 @@
 						class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item ml-3"><a class="nav-link"
-					href="/UpGrade/details.change">Approve Reimbursements</a></li>
-				<li class="nav-item ml-3"><a class="nav-link"
 					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
@@ -65,14 +63,27 @@
 			</table>
 		</div>
 	</div>
-	<div class="col-md-6 d-flex justify-content-center">
-		<h4 class="mr-3 mt-5">Enter ID of Grade or Presentation to Approve:</h4>
-		<form method="post" action=""
-			class="form-inline mt-5">
-			<input class="form-control mr-sm-2" type="text"
-				placeholder="Reimbursement ID" name="rID" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0">Submit</button>
-		</form>
+	<div class="row">
+		<div class="col-md-6 d-flex justify-content-center">
+			<h4 class="mr-3 mt-5">Enter ID of Grade or Presentation to
+				Approve:</h4>
+			<form method="post" action="" class="form-inline mt-5">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0">Approve</button>
+			</form>
+		</div>
+	</div>
+		<div class="row">
+		<div class="col-md-6 d-flex justify-content-center">
+			<h4 class="mr-3 mt-5">Enter ID of Grade or Presentation to
+				Deny:</h4>
+			<form method="post" action="" class="form-inline mt-5">
+				<input class="form-control mr-sm-2" type="text"
+					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+				<button class="btn btn-outline-danger my-2 my-sm-0">Deny</button>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
