--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
@@ -30,10 +30,14 @@
 				<li class="nav-item active"><a class="nav-link" href="/UpGrade/empForm.change">Submission
 						Form <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/allpending.change">Pending
+				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
 						Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
+					href="/UpGrade/grades.change">Grade Submission and Pending Approval
+					</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/awarded.change">Awarded Reimbursements
+					</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log Out</button></a>
