--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -32,9 +32,14 @@
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item active"><a class="nav-link"
-					href="/UpGrade/allpending.change">Pending Reimbursements <span
+					href="/UpGrade/pending.change">Pending Reimbursements <span
 						class="sr-only">(current)</span>
 				</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/grades.change">Grade Submission and
+						Pending Approval </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button"
@@ -47,84 +52,32 @@
 			<h1 class="m-5">Pending Employee Reimbursements</h1>
 		</div>
 		<div class="col-md-6 d-flex justify-content-center">
-			<h4 class="mr-3 mt-5">Search by Reimbursement Request ID:</h4>
+			<h4 class="mr-3 mt-5">Cancel Reimbursement by ID:</h4>
 			<form method="post" action="/UpGrade/getEmpDetails.json"
 				class="form-inline mb-3">
 				<input class="form-control mr-sm-2" type="text"
 					placeholder="Reimbursement ID" name="rID" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0">Search</button>
+				<button class="btn btn-outline-success my-2 my-sm-0">Submit</button>
 			</form>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6 ml-5">
-			<h3>
-				<span class="text-primary">Pending</span>
-			</h3>
-			<div class="row">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Event Name</th>
-							<th>Projected Reimbursement</th>
-							<th>Dept. Head Approval</th>
-							<th>Supervisor Approval</th>
-							<th>BenCo Approval</th>
-						</tr>
-					</thead>
-					<tbody id="pendingData">
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<div class="col-md-5 ml-5">
-			<h3>
-				<span class="text-primary">Approved</span>
-			</h3>
-			<div class="row">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Event Name</th>
-							<th>Grade Submission</th>
-							<th>Supervisor Approval</th>
-							<th>BenCo Approval</th>
-						</tr>
-					</thead>
-					<tbody id="approvedData">
-					</tbody>
-				</table>
-			</div>
+		<div class="col mx-5">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Event Name</th>
+						<th>Projected Reimbursement</th>
+						<th>Dept. Head Approval</th>
+						<th>Supervisor Approval</th>
+						<th>BenCo Approval</th>
+					</tr>
+				</thead>
+				<tbody id="pendingData">
+				</tbody>
+			</table>
 		</div>
 	</div>
-	<div class="row mt-5">
-		<div class="col ">
-			<div class="row ">
-				<div class="col-md-6"></div>
-				<div class="col-md-6">
-					<h3 class="text-primary d-flex justify-content-start ml-5">
-						Awarded Submissions</h3>
-				</div>
-			</div>
-			<div class="row ">
-				<div class="col-md-6"></div>
-				<div class="col-md-6 d-flex justify-content-end">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th>ID</th>
-								<th>Event Name</th>
-								<th>Grade Submission</th>
-								<th>Amount Awarded</th>
-							</tr>
-						</thead>
-						<tbody id="awardedData">
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
 </body>
 </html>
