reverting from backup

--- a/UpGrade/src/main/webapp/HTML/EmpPortal/GradesPending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/GradesPending.html
@@ -26,16 +26,19 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/emphome.change">Home </a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/rules.change">Reimbursement Rules</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules<span
+						class="sr-only">(current)</span>
+				</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/pending.change">Pending Reimbursements </a></li>
-				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
+				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/grades.change">Grade Submission and Pending
-						Approval <span class="sr-only">(current)</span>
-				</a></li>
+						Approval </a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
@@ -77,7 +80,8 @@
 				<div class="custom-file">
 					<input type="file" class="custom-file-input" id="inputGroupFile01"
 						aria-describedby="inputGroupFileAddon01" name="attachmentEmail">
-					<label class="custom-file-label" for="inputGroupFile01">Grade File Submission</label>
+					<label class="custom-file-label" for="inputGroupFile01">Grade
+						File Submission</label>
 				</div>
 				<button class="btn btn-outline-success mt-3">Submit</button>
 			</form>
