--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Rules.html
@@ -24,25 +24,27 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/emphome.change">Home </a></li>
-				<li class="nav-item active"><a class="nav-link" href="/UpGrade/rules.change">Reimbursement
-						Rules<span class="sr-only">(current)</span>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/emphome.change">Home </a></li>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules<span
+						class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/empForm.change">Submission
-						Form </a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
-						Reimbursements</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/empForm.change">Submission Form </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
-					href="/UpGrade/grades.change">Grade Submission and Pending Approval
-					</a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/awarded.change">Awarded Reimbursements
-					</a></li>
+					href="/UpGrade/grades.change">Grade Submission and Pending
+						Approval </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
-						Out</button></a>
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
