--- a/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/BenCoPortal.html
@@ -65,19 +65,19 @@
 	<div class="row">
 		<div class="col-md-6 d-flex justify-content-center">
 			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Approve:</h4>
-			<form method="post" action="" class="form-inline mt-5">
+			<form method="post" action="bencoapprove.change" class="form-inline mt-5">
 				<input class="form-control mr-sm-2" type="text"
-					placeholder="Reimbursement ID" name="rID" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0">Approve</button>
+					placeholder="Reimbursement ID" name="rIDapprove" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Approve</button>
 			</form>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6 d-flex justify-content-center">
 			<h4 class="mr-3 mt-5">Enter ID of Reimbursement to Deny:</h4>
-			<form method="post" action="" class="form-inline mt-5">
+			<form method="post" action="bencodeny.change" class="form-inline mt-5">
 				<input class="form-control mr-sm-2" type="text"
-					placeholder="Reimbursement ID" name="rID" aria-label="Search">
+					placeholder="Reimbursement ID" name="rIDdeny" aria-label="Search">
 				<button class="btn btn-outline-danger my-2 my-sm-0">Deny</button>
 			</form>
 		</div>
