--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -25,39 +25,40 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="/UpGrade/emphome.change">Home
-						<span class="sr-only">(current)</span>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/emphome.change">Home <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/rules.change">Reimbursement
-						Rules</a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/empForm.change">Submission
-						Form </a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/allpending.change">Pending
-						Reimbursements</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/empForm.change">Submission Form </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/allpending.change">Pending Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
-					href="/UpGrade/grades.change">Grade Submission and Pending Approval
-					</a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/awarded.change">Awarded Reimbursements
-					</a></li>
+					href="/UpGrade/grades.change">Grade Submission and Pending
+						Approval </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log
-						Out</button></a>
+				<a href="/UpGrade/logout.change"><button type="button"
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
 	<div class="row">
 		<h1 class="m-5">
-			Welcome, <span id="empName" class="text-primary"></span>, to the Tuition
-			Reimbursement Management System
+			Welcome, <span id="empName" class="text-primary"></span>, to the
+			Tuition Reimbursement Management System
 		</h1>
 	</div>
 	<div class="row">
 		<div class="col-lg-4 d-flex justify-content-center">
 			<h3 class="ml-5">
-				You have <span class="text-warning">$</span><span id="amt" class="text-warning"></span> available.
+				You have <span class="text-warning">$</span><span id="amt"
+					class="text-warning"></span> available.
 			</h3>
 		</div>
 	</div>
