--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Form.html
@@ -60,23 +60,25 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/emphome.change">Home </a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/rules.change">Reimbursement Rules</a></li>
 				<li class="nav-item active"><a class="nav-link"
-					href="/UpGrade/empForm.change">Submission Form <span
+					href="/UpGrade/rules.change">Reimbursement Rules<span
 						class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="/UpGrade/pending.change">Pending
-						Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/grades.change">Grade Submission and Pending Approval
-					</a></li>
+					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/awarded.change">Awarded Reimbursements
-					</a></li>
+					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/grades.change">Grade Submission and Pending
+						Approval </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
-				<a href="/UpGrade/logout.change"><button type="button" class="btn btn-primary">Log Out</button></a>
+				<a href=""><button type="button" class="btn btn-primary">Log
+						Out</button></a>
 			</div>
 		</div>
 	</nav>
@@ -85,87 +87,74 @@
 	<div class="container">
 		<div class="row mt-5">
 			<div class="col">
-				<form method="post" action="/UpGrade/empForm.change">
+				<form method="POST" action="/UpGrade/empForm.change">
 					<div class="card-group">
 						<div class="card">
 							<div class="card-body">
-								<div class="row mt-3 d-flex justify-content-center">
-									<div class="col">
-										<input placeholder="First Name" name="firstName"
-											class="form-control">
-									</div>
-									<div class="col">
-										<input placeholder="Last Name" name="lastName"
-											class="form-control">
-									</div>
-									<div class="col">
-										<select class="custom-select" name="department">
-											<option selected disabled value="0">Department Head</option>
-											<option value="6">Gandalf</option>
-											<option value="2">Saruman</option>
-											<option value="3">Ray</option>
-											<option value="4">Tina</option>
-											<option value="5">Boromir</option>
-										</select>
-									</div>
-									<div class="col">
-										<select class="custom-select" name="supervisor">
-											<option selected disabled value="0">Employee Supervisor</option>
-											<option value="3">Ray</option>
-											<option value="4">Tina</option>
-											<option value="6">Gandalf</option>
-										</select>
-									</div>
-								</div>
+
 								<div class="row d-flex justify-content-center mt-3">
 									<div class="col-md-6">
 										<input placeholder="Event Name" name="eventName"
-											class="form-control">
+											class="form-control" required>
 									</div>
 									<div class="col-md-2">
 										<input type="date" name="date" placeholder="Date"
-											class="form-control">
+											class="form-control" required>
 									</div>
 									<div class="col-md-2">
 										<input type="time" name="time" placeholder="Time"
-											class="form-control">
+											class="form-control" required>
 									</div>
 									<div class="col-md-2">
 										<input placeholder="Location" name="location"
-											class="form-control">
+											class="form-control" required>
 									</div>
 								</div>
 								<div class="row d-flex justify-content-center mt-3">
 									<div class="col-md-6">
 										<input type="text" placeholder="Work Time Missed"
-											name="workTimeMissed" class="form-control">
+											name="workTimeMissed" class="form-control" required>
 									</div>
 									<div class="col-md-6">
-										<textarea class="form-control" name="description">Description</textarea>
+										<textarea class="form-control" name="description" required>Description</textarea>
 									</div>
 								</div>
 								<div class="row d-flex justify-content-center mt-3">
 									<div class="col-md-2">
-										<input placeholder="Cost" name="cost" class="form-control">
+										<input placeholder="Cost" name="cost" class="form-control"
+											required>
 									</div>
 									<div class="col-md-4">
-										<select class="custom-select" name="gradingFormat">
-											<option value="Grade">Grade</option>
-											<option value="Presentation">Presentation</option>
-										</select> <select class="custom-select mt-1" name="typeOfEvent">
+										<select class="custom-select" name="gradingFormat" required>
+											<option selected disabled value="0">Grading Format</option>
+											<option value="1">Grade</option>
+											<option value="2">Presentation</option>
+										</select> <select class="custom-select mt-1" name="typeOfEvent"
+											required>
 											<option selected disabled value="0">Type of Event</option>
-											<option value="University">University</option>
-											<option value="Seminar">Seminar</option>
-											<option value="Certification Preparation">Certification
-												Preparation</option>
-											<option value="Certification">Certification</option>
-											<option value="Technical Training">Technical
-												Training</option>
-											<option value="Other">Other</option>
+											<option value="1">University</option>
+											<option value="2">Seminar</option>
+											<option value="3">Certification Preparation</option>
+											<option value="4">Certification</option>
+											<option value="5">Technical Training</option>
+											<option value="6">Other</option>
+										</select>
+									</div>
+									<div class="col-md-6">
+										<textarea class="form-control" name="justification" required>Work Related Justification</textarea>
+									</div>
+								</div>
+								<div class="row d-flex justify-content-center mt-3">
+									<div class="col-md-4">
+										<div class="custom-file">
+											<input type="file" class="custom-file-input"
+												id="inputGroupFile01"
+												aria-describedby="inputGroupFileAddon01"
 												name="attachmentEvent"> <label
-												class="custom-file-label" for="inputGroupFile01">Event
-												Related Attachments</label>
+												class="custom-file-label" for="inputGroupFile01"
+												id="forInputGroupFile01">Event Related Attachments</label>
 										</div>
+										<progress></progress>
 									</div>
 									<div class="col-md-4">
 										<div class="custom-file">
@@ -173,23 +162,23 @@
 												id="inputGroupFile02"
 												aria-describedby="inputGroupFileAddon01"
 												name="attachmentEmail"> <label
-												class="custom-file-label" for="inputGroupFile01">Approval
-												Email Attachments</label>
+												class="custom-file-label" for="inputGroupFile02"
+												id="forInputGroupFile02">Approval Email Attachments</label>
 										</div>
+										<progress></progress>
 									</div>
 									<div class="col-md-4">
-										<select class="custom-select" name="approval">
-											<option selected disabled></option>
+										<select class="custom-select" name="approval" required>
+											<option selected disabled value="0">Type of Approval</option>
 											<option value="1">Direct Supervisor</option>
 											<option value="2">Department Head</option>
-											<option value="3">Both</option>
 										</select>
 									</div>
 								</div>
 								<div class="row d-flex justify-content-center mt-5">
 									<div class="col-md-2">
-										<button type="submit" onclick="doSubmit()" class="btn btn-primary m-1">Submit
-											Form</button>
+										<button type="submit" onclick="doSubmit()"
+											class="btn btn-primary m-1">Submit Form</button>
 									</div>
 								</div>
 							</div>
