--- a/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/Pending.html
@@ -27,22 +27,19 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/emphome.change">Home </a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/rules.change">Reimbursement Rules</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules<span
+						class="sr-only">(current)</span>
+				</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
-				<li class="nav-item active"><a class="nav-link"
-					href="/UpGrade/allpending.change">Pending Reimbursements <span
-						class="sr-only">(current)</span>
-				</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
-					href="/UpGrade/pending.change">Pending Reimbursements <span
-						class="sr-only">(current)</span>
-				</a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/grades.change">Grade Submission and
-						Pending Approval </a></li>
+					href="/UpGrade/grades.change">Grade Submission and Pending
+						Approval </a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
@@ -55,88 +52,6 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h1 class="m-5">Pending Employee Reimbursements</h1>
-<<<<<<< HEAD
-		</div>
-		<div class="col-md-6 d-flex justify-content-center">
-			<h4 class="mr-3 mt-5">Search by Reimbursement Request ID:</h4>
-			<form method="post" action="/UpGrade/getEmpDetails.json"
-				class="form-inline mb-3">
-				<input class="form-control mr-sm-2" type="text"
-					placeholder="Reimbursement ID" name="rID" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0">Search</button>
-			</form>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 ml-5">
-			<h3>
-				<span class="text-primary">Pending</span>
-			</h3>
-			<div class="row">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Event Name</th>
-							<th>Projected Reimbursement</th>
-							<th>Dept. Head Approval</th>
-							<th>Supervisor Approval</th>
-							<th>BenCo Approval</th>
-						</tr>
-					</thead>
-					<tbody id="pendingData">
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<div class="col-md-5 ml-5">
-			<h3>
-				<span class="text-primary">Approved</span>
-			</h3>
-			<div class="row">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Event Name</th>
-							<th>Grade Submission</th>
-							<th>Supervisor Approval</th>
-							<th>BenCo Approval</th>
-						</tr>
-					</thead>
-					<tbody id="approvedData">
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-	<div class="row mt-5">
-		<div class="col ">
-			<div class="row ">
-				<div class="col-md-6"></div>
-				<div class="col-md-6">
-					<h3 class="text-primary d-flex justify-content-start ml-5">
-						Awarded Submissions</h3>
-				</div>
-			</div>
-			<div class="row ">
-				<div class="col-md-6"></div>
-				<div class="col-md-6 d-flex justify-content-end">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th>ID</th>
-								<th>Event Name</th>
-								<th>Grade Submission</th>
-								<th>Amount Awarded</th>
-							</tr>
-						</thead>
-						<tbody id="awardedData">
-						</tbody>
-					</table>
-				</div>
-			</div>
-=======
 		</div>
 		<div class="col-md-6 d-flex justify-content-center">
 			<h4 class="mr-3 mt-5">Cancel Reimbursement by ID:</h4>
@@ -164,7 +79,7 @@
 				<tbody id="pendingData">
 				</tbody>
 			</table>
->>>>>>> NewFoshay
 		</div>
+	</div>
 </body>
 </html>
