--- a/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/SingleView.html
@@ -26,15 +26,21 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/emphome.change">Home </a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/rules.change">Reimbursement Rules</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules<span
+						class="sr-only">(current)</span>
+				</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/allpending.change">Pending Reimbursements
-				</a></li>
+					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/grades.change">Grade Submission and Pending
+						Approval </a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button"
@@ -42,13 +48,9 @@
 			</div>
 		</div>
 	</nav>
-		<div class="row mt-5">
-		<div class="col d-flex justify-content-center ">
-			
-		</div>
+	<div class="row mt-5">
+		<div class="col d-flex justify-content-center "></div>
 	</div>
-	<div class="row mt-3">
-		
-	</div>
+	<div class="row mt-3"></div>
 </body>
 </html>
